--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
             #16a085 - green
         */
         :root {
-            --color-scheme: #f55b7c;
+            --color-scheme: #1B998B;
         }
 
         * {
