--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
             #16a085 - green
         */
         :root {
-            --color-scheme: #1b998b;
+            --color-scheme: #e76b74;
         }
 
         * {
